--- a/src/Pages/Events/Events.css
+++ b/src/Pages/Events/Events.css
@@ -37,7 +37,7 @@
     justify-content: flex-end;
     height: 100vh;
     overflow: hidden;
-    background-color: black;
+    /* background-color: black; */
 }
 .containera {
     margin: 0px;
@@ -53,13 +53,14 @@
     width: 150px;
     height: 150px;
     border-radius: 5px;
-    background-color: #b9b9b9;
+    background-color: transparent;
     text-align: center;
 }
 
 .child-container img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     border-radius: inherit;
 }
 
