--- a/src/Pages/Footer/Footer.css
+++ b/src/Pages/Footer/Footer.css
@@ -5,9 +5,9 @@
     background: black;
     color: #fff;
     padding: 2rem 0rem;
-    border-radius: 50px 50px 0 0;
+    /* border-radius: 25px 25px 0 0; */
     font-family: 'Poppins';
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.8rem;
     position: relative;
 }
@@ -84,6 +84,10 @@ ul li a:hover {
     font-size: 2.5rem;
     margin-right: 3rem;
     text-align: center;
+}
+
+.socialIcons{
+    margin-top: 3rem;
 }
 
 .socialIcons a {
