--- a/src/Atoms/EventCard/EventCard.css
+++ b/src/Atoms/EventCard/EventCard.css
@@ -1,22 +1,19 @@
 .card {
-    margin: 0 auto;
-    width: 34rem;
     color: black !important;
     box-shadow: 0 8px 7px 0px rgba(0, 0, 0, 0.2);
-    padding: 2rem .9rem;
+    width: 20% !important;
+    height: auto;
+    margin: 10px 20px !important;
+    text-align: center;
+    padding: 20px 0px;
 }
 
-.imgBox {
-    width: 100%;
-    border: 2px solid transparent;
-    border-image: linear-gradient(to right, #1A2980 0%, #26D0CE 51%, #1A2980 100%);
-    border-image-slice: 1;
-}
 
 .img {
-    width: 100%;
-    height: 100%;
+    width: 70% !important;
     object-fit: cover;
+    margin: auto;
+    
 }
 
 .textBox {
@@ -24,23 +21,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.9rem .3rem;
-    gap: 1.5rem;
-    height: 15rem;
+    /* padding: 1.9rem .3rem; */
+    /* gap: 1.5rem; */
+    /* height: 15rem; */
     justify-content: flex-end;
 }
 
-.heading {
-    font-size: 2.4rem;
-    text-align: center;
+.head{
+    font-size: 25px;
+    margin-bottom: 10px;
 }
-
 .btn_1 {
     background-image: linear-gradient(to right, #1A2980 0%, #26D0CE 51%, #1A2980 100%);
-    padding: .5rem 1.7rem;
     border: none;
     border-radius: 5px;
-    font-size: 1.8rem;
     font-weight: 600;
     color: #fff;
     transition: all .3s;
