--- a/src/Pages/EventsRules/Cultural/CulturalDetails.css
+++ b/src/Pages/EventsRules/Cultural/CulturalDetails.css
@@ -1,5 +1,9 @@
 .ambaSection {
-    padding: 2rem 1.5rem;
+    /* padding: 2rem 1.5rem; */
+    height: 100vh !important;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .tech {
@@ -17,10 +21,10 @@
 }
 
 .scrollBox {
-    height: 40rem;
+    height: 80vh;
     overflow-y: auto;
-    flex-basis: 60%;
     padding: 1rem 1.4rem;
+    width: 60%;
 }
 
 .scrollBox::-webkit-scrollbar {
@@ -31,6 +35,9 @@
     background: rgba(110, 109, 109, 0.726);
 }
 
+.ambassadar p{
+    font-size: 12px;
+}
 .imgBox {
     margin: 2rem auto;
     padding: 0 4rem;
@@ -38,28 +45,31 @@
 }
 
 .heading {
-    font-size: 4rem;
-    margin-bottom: 1.5rem;
+    font-size: 30px;
+    text-align: left;
+    padding: 10px 0px;
+    border-bottom: 1.5px solid black;
+
 }
 
 .para {
-    font-size: 2rem;
-    margin-bottom: 2.5rem;
-    line-height: 3.4rem;
+    font-size: 20px;
+    line-height: 25px;
 }
 
+.imgBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .img {
     width: 100%;
+    margin: auto;
 }
 
 .btn_2 {
-    margin-top: 3rem;
-    align-self: flex-start;
     background-image: linear-gradient(to right, #1A2980 0%, #26D0CE 51%, #1A2980 100%);
-    padding: 1.5rem 1.7rem;
     border: none;
-    border-radius: 9px;
-    font-size: 2rem;
     font-weight: 600;
     color: #fff;
     transition: all .3s;
