--- a/src/Pages/Events/Events.css
+++ b/src/Pages/Events/Events.css
@@ -1,8 +1,4 @@
-
-
-
-
-@keyframes move {
+/* @keyframes move {
     from {
         transform: rotate(40deg) translate(-30px, 60px);
     }
@@ -12,7 +8,7 @@
     }
 }
 
-.fixText{
+.fixText {
     font-size: 80px;
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -21,6 +17,7 @@
     margin-right: -100px;
     animation: moveText 4.5s linear infinite alternate-reverse;
 }
+
 @keyframes moveText {
     from {
         transform: translateX(60px);
@@ -31,13 +28,14 @@
     }
 }
 
-#eventPage{
+#eventPage {
     max-width: 100vw;
     display: flex;
     justify-content: flex-end;
     height: 100vh;
     overflow: hidden;
 }
+
 .containera {
     margin: 0px;
     left: 80vw;
@@ -47,6 +45,12 @@
     gap: 20px;
     z-index: 2;
     animation: move 4.5s linear infinite alternate;
+}
+
+.pastEventSvg {
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    object-fit: cover;
 }
 
 .containera .child-container {
@@ -65,12 +69,12 @@
     border-radius: inherit;
 }
 
-/* @media screen and (max-width: 1000px) {
+ @media screen and (max-width: 1000px) {
     body .heading {
         margin: 9rem 3rem;
         font-size: 6rem;
     }
-} */
+} 
 
 @media screen and (max-width: 780px) {
     body .heading {
@@ -113,4 +117,88 @@
             transform: rotate(45deg) translate(150px, 20px);
         }
     }
+} */
+
+:root {
+    --slow: 0s;
+}
+
+
+
+#pastEventsGrid {
+    display: flex;
+    justify-content: center;
+    gap: 3vmin;
+    transition: 0.3s;
+}
+
+.slider {
+    height: 80vh;
+    overflow: hidden;
+}
+
+.slider-items {
+    display: flex;
+    flex-direction: column;
+    gap: 3vmin;
+    padding-top: 3vmin;
+    animation-name: scroll;
+    animation-duration: 30s;
+    animation-duration: calc(30s + var(--slow));
+    animation-delay: var(--delay);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.pastHead{
+    margin: 0;
+    font-weight: 700;
+    letter-spacing: 15px;
+}
+
+.pastPara{
+    letter-spacing: 10px;
+    text-transform: uppercase;
+}
+.item {
+    position: relative;
+    transition: all .3s ease-in-out;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+
+
+.item:hover {
+    transform: scale(0.9);
+}
+
+@keyframes scroll {
+    100% {
+        transform: translateY(-100%);
+    }
+}
+
+@media (hover: hover) {
+    .slider:hover .slider-items {
+        animation-play-state: paused;
+    }
+}
+
+
+@media (max-width: 600px) {
+    .hidden-m {
+        display: none;
+    }
+}
+
+
+.slider {
+    --delay: -10s;
+    --slow: 2s
+}
+
+.hidden-m {
+    --delay: -20s;
+    --slow: -2s
 }
