--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,15 @@ body {
 }
 
 .generoOverlay{
-  position: absolute;
-  left: 0;
   z-index: 1 !important;
-  top:230px
+  margin-top: -20px;
+}
+
+
+.homeText{
+  margin-top: 80px;
+  height:25%;
+  text-align: center;
 }
 div {
   -ms-overflow-style: none;
@@ -73,6 +78,7 @@ a{
     transform: scale(1.15);
     margin-top: 6px;
   }
+
 }
 
 
@@ -177,7 +183,23 @@ button:hover {
     background-position: bottom;
   }
 
+  
+  .homeText{
+    height: 75%;
+    
+  }
 
+  #pastEventsGrid{
+    flex-wrap: wrap;
+
+  }
+
+  #eventPage{
+    height: auto !important;
+  }
+  #about{
+    height: 90vh;
+  }
 }
 
 
@@ -232,3 +254,6 @@ button:hover {
   height: 100px;
   width: 250px;
 } */
+
+
+
