--- a/src/Pages/parallax.css
+++ b/src/Pages/parallax.css
@@ -20,32 +20,41 @@
 }
 
 #one {
-    background-image: url(/src/assets/home/sparkle-night.png);
+    background-image: url(/src/assets/home/india-14.png);
 }
 #two {
-    background-image: url(/src/assets/home/updated-monument-10.png);
+    background-image: url(/src/assets/home/india-03.png);
 }
 #three {
-    background-image: url(/src/assets/home/updated-monument-09.png);
+    background-image: url(/src/assets/home/india-02.png);
 }
 #four {
-    background-image: url(/src/assets/home/updated-monument-08.png);
+    background-image: url(/src/assets/home/india-05.png);
 }
 #five {
-    background-image: url(/src/assets/home/updated-monument-07.png);
+    background-image: url(/src/assets/home/india-06.png);
 }
 #six {
-    background-image: url(/src/assets/home/updated-monument-06.png);
+    background-image: url(/src/assets/home/india-07.png);
 }
 #seven {
-    background-image: url(/src/assets/home/updated-monument-05.png);
+    background-image: url(/src/assets/home/india-08.png);
 }
 #eight {
-    background-image: url(/src/assets/home/updated-monument-04.png);
+    background-image: url(/src/assets/home/india-09.png);
 }
 #nine {
-    background-image: url(/src/assets/home/updated-monument-03.png);
+    background-image: url(/src/assets/home/india-10.png);
 }
 #ten {
-    background-image: url(/src/assets/home/updated-monument-02.png);
+    background-image: url(/src/assets/home/india-11.png);
+}
+#eleven {
+    background-image: url(/src/assets/home/india-12.png);
+}
+#twelve {
+    background-image: url(/src/assets/home/india-13.png);
+}
+#thirteen {
+    background-image: url(/src/assets/home/india-04.png);
 }
