--- a/src/Pages/parallax.css
+++ b/src/Pages/parallax.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .animation, .animation-layer {
 	height: 1000px;
@@ -69,7 +69,7 @@
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     /* font-size: 120px; */
-    /* padding-bottom: 20px; */
+    /* padding-bottom: 20px; 
 
     margin-left: 6vw;
     margin-right: 6vw;
@@ -77,7 +77,6 @@
     margin-bottom: 2rem;
 }
 
-/* for '23 */
 .update {
     line-height: 160px;
     margin-left: -10px;
@@ -97,7 +96,7 @@
 @media screen and (max-width: 600px) {
     .parallax-wrapper {
         /* width: 200px;
-        height: 200px; */
+        height: 200px; 
         display: none;
     }
-}
+} */
