--- a/src/Pages/parallax.css
+++ b/src/Pages/parallax.css
@@ -67,9 +67,9 @@
 
 .parallax-title {
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
+    font-weight: bold; */
     /* font-size: 120px; */
-    /* padding-bottom: 20px; 
+     /* padding-bottom: 20px; 
 
     margin-left: 6vw;
     margin-right: 6vw;
@@ -77,7 +77,7 @@
     margin-bottom: 2rem;
 }
 
-.update {
+/* .update {
     line-height: 160px;
     margin-left: -10px;
     color: transparent;
@@ -91,7 +91,7 @@
     100% {
       background-position: 2000px 0;
     }
-  }
+  } 
 
 @media screen and (max-width: 600px) {
     .parallax-wrapper {
