--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -1,59 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
-/* * {
-    margin: 0;
-    padding: 9;
-    text-transform: capitalize;
-    transition: all 0.2s linear;
-    font-family: sans-serif;
-} */
-
-/* body { 
-    background: #333;
-}
-
-
-h1 {
-    font-size: 40px;
-    margin-top: 20px;
-    color: #e74c3e;
-    text-align: center;
-} */
-
 .main-wrapper { 
+    padding-top: 100px;
     display: flex;
     justify-content: space-around;
-    /* align-items: center; */
 }
 
 .team-container { 
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
 
-.team-card-GS {
-    height: 500px;
-    width: 290px;
-    margin: 20px;
-    box-shadow: 0 3px 5px #000;
-    border-radius: 10px;
-    overflow: hidden;
-    text-align: center;
-    /* object-fit: coverb; */
-    background-color: #222;
-}
 
 .team-card { 
-    height: 500px;
-    width: 290px;
+    width: 250px;
     margin: 20px;
-    box-shadow: 0 3px 5px #000;
     border-radius: 10px;
+    padding: 10px;
     overflow: hidden;
     text-align: center;
-    /* object-fit: coverb; */
-    background-color: #222;
+    background-color: #ffffff00;
+    border: 3px solid white;
 }
 
 .team-card .bg-img img { 
