removed all the errors

--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -17,11 +17,12 @@
 }
 
 
-h1 {
+.core-team-heading {
     font-size: 40px;
     margin-top: 20px;
-    color: #e74c3e;
+    color: black;
     text-align: center;
+    padding-top: 15px;
 }
 
 .main-wrapper { 
