styled the team button

--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -20,7 +20,7 @@
 .core-team-heading {
     font-size: 40px;
     margin-top: 20px;
-    color: black;
+    color: white;
     text-align: center;
     padding-top: 15px;
 }
