Fixed Navbar Toggle Icon

--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -115,6 +115,7 @@
 .treasurer-wrapper { 
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     /* align-items: center; */
 }
 
