--- a/src/App.css
+++ b/src/App.css
@@ -216,6 +216,10 @@ button:hover {
   #about{
     height: 90vh;
   }
+  .navbar-collapse{
+    background-color: black;
+    border-radius: 10px;
+  }
 }
 
 
@@ -270,6 +274,11 @@ button:hover {
   height: 100px;
   width: 250px;
 } */
+
+
+.navbar-nav{
+  margin-left: auto;
+}
 
 
 
