--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -137,3 +137,12 @@
 /* transform: rotate(360deg); */
 /* transform: scaleX(-1); */
 
+/* styling for the subteam */
+.subteam-unique {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#subteam {
+    height: 400px;
+}
