--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   background-image: url("./assets/purple-blue-inv.jpg");
   background-size: contain;
   background-repeat: no-repeat;
+
+  background-color: #5f0a87;
 }
 
 body {
@@ -182,9 +184,10 @@ button:hover {
     display: block;
   }
   #home-carousel {
-    /* background-image: url("./assets//purple-blue-inv.jpg"); */
     background-repeat: no-repeat;
     background-position: bottom;
+    /* background-color: #5f0a87; */
+  
   }
 
 
@@ -210,6 +213,8 @@ button:hover {
   }
 
   #eventPage{
+    background-color: #9921e8;
+    background-image: linear-gradient(315deg, #9921e8 0%, #5f72be 74%);
     padding: 13vw 0px;
   }
 
@@ -230,6 +235,9 @@ button:hover {
   }
 
   #about {
+    background-color: #a4508b;
+    background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+
     height: 90vh;
   }
 
