--- a/src/Atoms/EventCard1/EventCard.css
+++ b/src/Atoms/EventCard1/EventCard.css
@@ -1,9 +1,9 @@
-.main-wrapper1 {
+.main-wrapper2 {
     display: flex;
     /* width: 300px; */
 }
 
-.team-card {
+.team-card2 {
     height: 500px;
     /* width: 400px; */
     margin: 20px;
@@ -14,23 +14,24 @@
     background-color: #222;
 }
 
-.bg-img1{
+.bg-img2{
     transition: 0.5s;
 }
 
-.team-card:hover .bg-img1 {
+.team-card:hover .bg-img2 {
     transform: scale(1.2);
 }
 
-.info1 {
-    margin-top: -400px;
+.info2 {
+    /* margin-top: -400px; */
     color: purple;
     z-index: 1;
+    margin-top: 2rem;
 }
 
-.bg-img1 img {
+.bg-img2 img {
     width: 100%;
-    height: 40rem;
+    height: 18rem;
     object-fit: cover;
     /* clip-path: polygon(0 0, 100% 0%, 100% 70%, 45% 100%, 0 70%); */
 }
