--- a/src/Atoms/EventCard/EventCard.css
+++ b/src/Atoms/EventCard/EventCard.css
@@ -23,16 +23,16 @@
 }
 
 .info1 {
-    margin-top: -400px;
+    margin-top: -120px;
     color: purple;
-    z-index: 1;
+    z-index: 100 !important;
 }
 
 .bg-img1 img {
     width: 100%;
-    height: 40rem;
+    height: 200px;
+    overflow: hidden;
     object-fit: cover;
-    /* clip-path: polygon(0 0, 100% 0%, 100% 70%, 45% 100%, 0 70%); */
 }
 
 .textBox {
