--- a/src/Pages/EventsList/Egaming/EgamingList.css
+++ b/src/Pages/EventsList/Egaming/EgamingList.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 3rem;
+    /* gap: 3rem; */
     max-width: 95%;
     margin: 3rem auto;
     padding: 3rem 6rem;
