--- a/src/Atoms/EventCard1/EventCard.css
+++ b/src/Atoms/EventCard1/EventCard.css
@@ -26,7 +26,8 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;    border-radius: 20px;
     overflow: hidden;
     text-align: center;
-    background-color: #222;
+    background: linear-gradient(to right, #232526, #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     display: flex;
     align-items: center;
     justify-content: center;
